<resources>
    <string name="activity_login_company">chinetek 上海辰达 @2017</string>
    <string name="app_name">WMS</string>
    <string name="version_msg">当前版本：1.0</string>
    <string name="SaveSuccess">保存成功！</string>
    <string name="login_login">登陆</string>
    <string name="login_setting">设置</string>
    <string name="login_Version">版本：</string>
    <string name="Setting_Save">保存设置</string>
    <string name="Setting_IPAdress">服务器：</string>
    <string name="Setting_Port">端口：</string>
    <string name="Setting_TimeOut">超时时间：</string>
    <string name="Setting_Second">秒</string>
    <string name="Setting_PrintIP">打印机IP：</string>
    <string name="Setting_ElecScale">电子称IP：</string>
    <string name="app_product">车间</string>
    <string name="receipt_title">收货</string>
    <string name="receipt_subtitle">单据选择</string>
    <string name="supplier_subtitle">供应商选择</string>
    <string name="receiptscan_subtitle">收货扫描</string>
    <string name="receiptscan_billdetail">收货单据条码明细</string>
    <string name="innerMove_billdetail">移库条码明细</string>
    <string name="UpShelf_title">上架</string>
    <string name="UpShelfscan_subtitle">上架扫描</string>
    <string name="UpShelfscan_billdetail">上架单据明细</string>
    <string name="QC_title">质检</string>
    <string name="QC_subtitle">质检扫描</string>
    <string name="QC_Material_subtitle">质检物料选择</string>
    <string name="query_title">查询</string>
    <string name="query_Materialtitle">物料</string>
    <string name="query_Stocktitle">库位</string>
    <string name="query_Bathtitle">批次</string>
    <string name="query_Suppliertitle">供应商</string>
    <string name="query_WorkNotitle">工单</string>
    <string name="query_EAN">EAN</string>
    <string name="OffShelf_title">下架</string>
    <string name="OffShelf_subtitle">下架扫描</string>
    <string name="LineStockOutReturnBillChoice">退料出库</string>
    <string name="LineStockOutMaterial">领料出库</string>
    <string name="LineStockInReturnBillChoice">退料入库</string>
    <string name="Review_title">发货复核</string>
    <string name="Review_subtitle">复核扫描</string>
    <string name="Product_Review_subtitle">发料复核</string>
    <string name="Product_Package_subtitle">包材发料</string>
    <string name="Product_rawMaterial_subtitle">原散发料</string>
    <string name="Product_returnrawMaterial_subtitle">原散退料</string>
    <string name="Product_bulk_subtitle">散装发料</string>
    <string name="Product_returnbulk_subtitle">散装退料</string>
    <string name="Product_semiproduct_subtitle">半制品发料</string>
    <string name="Product_returnsemiproduct_subtitle">半制品退料</string>
    <string name="Product_receiptsemiproduct_subtitle">半制品生产</string>
    <string name="Product_ProductStockin_subtitle">生产入库</string>
    <string name="Product_ProductStockout_subtitle">生产出库</string>
    <string name="Product_Package_scan">包材扫描核对</string>
    <string name="Product_Instock">散成品生产</string>
    <string name="Product_Outstock">线边仓出库</string>
    <string name="Product_manage_subtitle">生产记录</string>
    <string name="Product_fillPrint_subtitle">标签打印</string>
    <string name="Product_Line_subtitle">生产列表</string>
    <string name="Product_MaterialConfig_subtitle">备料确认</string>
    <string name="ProductPreProductNum">预生产数：</string>
    <string name="Product_Complete_subtitle">完工确认</string>
    <string name="Product_receipt_title">线边仓入库</string>
    <string name="Product_tankin_title">坦克投料</string>
    <string name="Product_tankout_title">坦克退料</string>
    <string name="Product_tankout_No">坦克编号：</string>
    <string name="Product_originlabel_No">原标签号：</string>
    <string name="Product_Expriy_Date">有效期：</string>
    <string name="Product_RemainNum">剩余数量：</string>
    <string name="Product_StartTime">开工时间：</string>
    <string name="Product_print">打印标签</string>
    <string name="Pallet_title">组托</string>
    <string name="Pallet_scan">组托扫描</string>
    <string name="Pallet_subtitle">组托明细</string>
    <string name="DisPallet_title">拆托</string>
    <string name="DisPallet_scan">拆托扫描</string>
    <string name="DisPallet_print">拆托打印托盘标签</string>
    <string name="ReaminLabel_print">打印剩余标签</string>
    <string name="Boxing_title">装拆箱</string>
    <string name="adjust_title">库存调整</string>
    <string name="InnerMove_title">移库</string>
    <string name="InnerMove_subtitle">移库扫描</string>
    <string name="Intentory_title">盘点</string>
    <string name="Intentory_add">新增盘点</string>
    <string name="Intentory_subtitle">盘点扫描</string>
    <string name="Intentory_desc">盘点描述：</string>
    <string name="Intentory_remark">备注：</string>
    <string name="Intentory_detail">盘点明细</string>
    <string name="MaterialChange_title">转料-入库单选择</string>
    <string name="MaterialChange_out_subtitle">转料-出库单选择</string>
    <string name="MaterialChange_scan_subtitle">转料-扫描</string>
    <string name="TakeSample_title">取样</string>
    <string name="StartPiicking">开始拣货</string>
    <string name="Truckload_title">装车记录</string>
    <string name="ReportOutput_title">工单报产量</string>
    <string name="title_Receipt_Right">筛选</string>
    <string name="title_Receipt_RightFilter">取消筛选</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>
    <string name="config">确定</string>
    <string name="filter">供应商筛选</string>
    <string name="QCfilter">质检取样</string>
    <string name="ReportNum">报产量</string>
    <string name="StartProduct">开工</string>
    <string name="ReportQC">完工报检</string>
    <string name="TaskAllcote">任务分配</string>
    <string name="isPicking">拣货</string>
    <string name="cancelPicking">取消拣货</string>
    <string name="LogUpload">日志上报</string>
    <string name="submit">提交</string>
    <string name="QCprint">取样打印</string>
    <string name="InStockQC">在库检</string>
    <string name="QCprintLabel">打印取样标签</string>
    <string name="Add">新增</string>
    <string name="filter_content">请输入或扫描单号/物料条码</string>
    <string name="filter_content1">请输入或扫描单号</string>
    <string name="filter_deleteContent">请输入或扫描删除的物料条码</string>
    <string name="supplier">供应商：</string>
    <string name="supplierNoFilter">未筛选</string>
    <string name="ArtNO">库位号：</string>
    <string name="EquipNO">设备号：</string>
    <string name="LineNO">生产线：</string>
    <string name="GroupNO">班组：</string>
    <string name="EmployeeNO">人员：</string>
    <string name="barcode">条码：</string>
    <string name="InstockProductNum">入库数量：</string>
    <string name="OutstockProductNum">出库数量：</string>
    <string name="company">据点：</string>
    <string name="batch">批次：</string>
    <string name="BNumber">包装量：</string>
    <string name="Bill">单号：</string>
    <string name="VehicleNum">车牌：</string>
    <string name="Volume">体积：</string>
    <string name="Weight">重量：</string>
    <string name="QCStatus">质检：</string>
    <string name="Number">件数：</string>
    <string name="Count">数量：</string>
    <string name="Status">状态：</string>
    <string name="freight">运费：</string>
    <string name="ProductNum">产量：</string>
    <string name="PersonLeave">人员离岗</string>
    <string name="PersonAdd">人员增加</string>
    <string name="MaterialConfig">备料确认</string>
    <string name="ProductComplete">生产完工</string>
    <string name="MaterialDetail">物料描述：</string>
    <string name="ScanNumber">扫描数量：</string>
    <string name="boxNumber">拆装数量：</string>
    <string name="OffshelfNumber">下架数量：</string>
    <string name="OffshelfPickNumber">拣货数量：</string>
    <string name="MoveNumber">移库数量：</string>
    <string name="ChanggeNumber">转换数量：</string>
    <string name="TakeSampleNumber">取样数量：</string>
    <string name="SplitNumber">拆零数量：</string>
    <string name="ProductCompleteNumber">完工数量：</string>
    <string name="NextScanMaterial">拣货物料：</string>
    <string name="suggestLocal">推荐库位：</string>
    <string name="Car">拣货小车：</string>
    <string name="TakeSampleReturnNumber">还回数量：</string>
    <string name="palletChange">组拆托</string>
    <string name="boxChange">装拆箱</string>
    <string name="outofstock">缺货</string>
    <string name="AllPackage">整&#160;&#160;&#160;&#160;&#160;箱</string>
    <string name="AllPallet">整&#160;&#160;&#160;&#160;&#160;托</string>
    <string name="unboxing">拆&#160;&#160;&#160;&#160;&#160;零</string>
    <string name="Carrier">承运商：</string>
    <string name="PalletNo">托盘号：</string>
    <string name="Destination">目的地：</string>
    <string name="StockNumber">库存数量：</string>
    <string name="PrintInLabel">打印内箱标签</string>
    <string name="PrintLabel">打印外箱标签</string>
    <string name="PrintPallet">打印托盘标签</string>
    <string name="PrintTank">打印坦克标签</string>
    <string name="LineStockInMaterial">领料入库</string>
    <string name="PalletDetail_Content">长按托盘号删除托盘\n点击箱号删除单个箱号</string>
    <string name="return_home">是否返回主界面？</string>
    <string name="No_Task">此单据在任务列表中不存在！</string>
    <string name="Msg_edit_isNotNull">数据不能为空！</string>
    <string name="activity_bill_Task">无单据任务</string>
    <string name="activity_Receipt_Scan_InStockQty">收货数量：</string>
    <string name="activity_Receipt_Scan_ReceiveQty">已收数量：</string>
    <string name="activity_Receipt_Scan_RemainQty">可收数量：</string>
    <string name="activity_Receipt_Scan_ScanQty">已扫数量：</string>
    <string name="activity_QC_Scan_ScanQty">已取数量：</string>
    <string name="activity_Receipt_Scan_Detail">单据明细</string>
    <string name="activity_UpShelf_Qty">上架数量：</string>
    <string name="activity_UpShelf_ScanQty">已扫数量：</string>
    <string name="activity_OffShelf_Print">打印拆零箱码</string>
    <string name="activity_Review_Group">组托</string>
    <string name="activity_Review_GroupDetail">组托明细</string>
    <string name="activity_InnerMove_Instock">移入库：</string>
    <string name="activity_Intentory_detail">已盘明细</string>
    <string name="activity_Intentory_PalletSubit">托盘提交</string>
    <string name="activity_pallet_combine">组托方式：</string>
    <string name="activity_pallet_On">添加组托</string>
    <string name="activity_pallet_Off">新建组托</string>
    <string name="activity_dispallet_combine">拆托方式：</string>
    <string name="activity_dispallet_On">整托销毁</string>
    <string name="activity_dispallet_Off">拆除单箱</string>
    <string name="activity_boxing">装拆方式：</string>
    <string name="activity_boxing_On">拆箱</string>
    <string name="activity_boxing_Off">装箱</string>
    <string name="activity_box_num">箱数：</string>
    <string name="activity_box_Label">箱标签</string>
    <string name="activity_Pallet_Label">托盘标签</string>
    <string name="activity_QC_Label">取样标签</string>
    <string name="activity_boxing_barcode">装箱箱码：</string>
    <string name="activity_boxing_unbarcode">拆箱箱码：</string>
    <string name="activity_adjust_Number">调整数量：</string>
    <string name="activity_adjust_stock">调整库位：</string>
    <string name="activity_pallet_barcode">托盘条码：</string>
    <string name="activity_pallet_PalletNum">累计箱数/件数：</string>
    <string name="activity_pallet_PalletPrint">托盘标签打印</string>
    <string name="activity_MaterialChange_In">入库单号：</string>
    <string name="activity_MaterialChange_Out">出库单号：</string>
    <string name="activity_login_WareHousChoice">仓库选择：</string>
    <string name="activity_Truck_TransupplierChoice">承运商选择</string>
    <string name="activity_Truck_AddressChoice">目的地选择</string>
    <string name="Msg_Login">用户验证...</string>
    <string name="Msg_Inventory_Load">盘点任务信息加载中...</string>
    <string name="Msg_GetT_InStockListADF">获取收货列表...</string>
    <string name="Msg_GetT_OutStockListADF">获取发货列表...</string>
    <string name="Msg_GetT_ReturnStockListADF">获取退料列表...</string>
    <string name="Msg_GetT_InStockDetailListByHeaderIDADF">获取收货明细列表...</string>
    <string name="Msg_GetT_LineInStockDetail">获取退料明细列表...</string>
    <string name="Msg_GetT_InTaskDetailListByHeaderIDADF">获取上架明细列表...</string>
    <string name="Msg_GetAreanobyCheckno">获取盘点库位信息...</string>
    <string name="Msg_GetWareHouse">获取仓库信息...</string>
    <string name="Hit_ScanBarcode">请扫描物料条码</string>
    <string name="Hit_ScanPallet">请扫描托盘条码</string>
    <string name="activity_Wolist_type">工单类别：</string>
    <string name="activity_Wolist_one">正常工单</string>
    <string name="activity_Wolist_two">外销工单</string>
</resources>