<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xx.chinetek.Pallet.CombinPallet">


    <EditText
        android:id="@+id/edt_Pallet"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:hint="@string/Hit_ScanPallet"
        app:layout_constraintBottom_toBottomOf="@+id/txt_Pallet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/txt_Pallet"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txt_Pallet"
        style="@style/TextViewComminStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_pallet_barcode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/SW_Pallet" />

    <EditText
        android:id="@+id/edt_Barcode"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:hint="@string/Hit_ScanBarcode"
        android:imeOptions="actionSearch"
        app:layout_constraintBottom_toBottomOf="@+id/textView47"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView47"
        app:layout_constraintRight_toRightOf="parent">

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/textView47"
        style="@style/TextViewComminStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/barcode"
        app:layout_constraintRight_toLeftOf="@+id/guideline11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_Pallet" />


    <Switch
        android:id="@+id/SW_Pallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:showText="true"
        android:splitTrack="true"
        android:switchPadding="12dp"
        android:text="@string/activity_pallet_combine"
        android:textAllCaps="false"
        android:textColor="@color/blue_66f"
        android:textOff="@string/activity_pallet_Off"
        android:textOn="@string/activity_pallet_On"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:checked="false" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline11"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.27"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="97dp" />

    <Button
        android:id="@+id/btn_PrintPalletLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/bt_selector"
        android:text="@string/activity_pallet_PalletPrint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/conLay_DisPallet"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_Barcode">

        <include
            android:id="@+id/include4"
            layout="@layout/material_info"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_CartonNum"
            style="@style/TextViewComminStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:gravity="left"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/textView51"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/textView51"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView51"
            style="@style/TextViewComminStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/activity_pallet_PalletNum"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include4" />

    </android.support.constraint.ConstraintLayout>

    <ListView
        android:id="@+id/lsv_PalletDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_PrintPalletLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conLay_DisPallet"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
