<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xx.chinetek.cyproduct.Billinstock.BillsIn">

    <Switch
        android:id="@+id/SW_WoType"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="24dp"
        android:checked="false"
        android:showText="true"
        android:splitTrack="true"
        android:switchPadding="12dp"
        android:text="@string/activity_Wolist_type"
        android:textAllCaps="false"
        android:textColor="@color/blue_66f"
        android:textOff="@string/activity_Wolist_one"
        android:textOn="@string/activity_Wolist_two"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:checked="false"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.123" />

    <EditText
        android:id="@+id/edt_filterContent"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/filter_content1"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SW_WoType" />


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/mSwipeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_filterContent">

        <ListView
            android:id="@+id/lsvChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline63"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline64"
        app:layout_constraintGuide_begin="108dp"
        android:orientation="horizontal" />


</android.support.constraint.ConstraintLayout>
