<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xx.chinetek.cywms.Receiption.ReceiptBillChoice">


    <EditText
        android:id="@+id/edt_filterContent"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/filter_content"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_SupplierContent"
        style="@style/textView_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="30dp"
        android:text="@string/supplier"
        android:textAlignment="textEnd"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txt_Suppliername"
        style="@style/textView_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/supplierNoFilter"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/txt_SupplierContent"
        app:layout_constraintLeft_toRightOf="@+id/txt_SupplierContent" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/mSwipeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_SupplierContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_filterContent"
        app:layout_constraintVertical_bias="0.0">

        <ListView
            android:id="@+id/lsvChoiceReceipt"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>




</android.support.constraint.ConstraintLayout>
