<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xx.chinetek.Box.Boxing">

    <Button
        android:id="@+id/btn_BoxConfig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/bt_selector"
        android:text="@string/config"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edt_BoxCode"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:hint="请扫描条码"
        app:layout_constraintBottom_toBottomOf="@+id/txt_box"
        app:layout_constraintLeft_toRightOf="@+id/txt_box"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/txt_box"
        style="@style/TextViewComminStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/activity_boxing_barcode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/textView65"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/edt_UnboxCode"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:hint="请扫描条码"
        app:layout_constraintBottom_toBottomOf="@+id/textView65"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline14"
        app:layout_constraintRight_toRightOf="parent">

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/textView65"
        style="@style/TextViewComminStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_boxing_unbarcode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline14"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.27"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="104dp" />

</android.support.constraint.ConstraintLayout>
